tests/baselines/reference/umdDependencyComment2.errors.txt
tests/cases/compiler/umdDependencyComment2.ts(3,21): error TS2307: Cannot find module 'm2' or its corresponding type declarations.


==== tests/cases/compiler/umdDependencyComment2.ts (1 errors) ====
    ///<amd-dependency path='bar'/>
    
    import m1 = require("m2")
                        ~~~~
!!! error TS2307: Cannot find module 'm2' or its corresponding type declarations.
    m1.f();
    